# agent2agent

./: .env.example  README.md  orchestrator.http  pyproject.toml  run.sh  stop.sh  youtube_analysis_history.json
docs/: architecture.md
src/: cli.py  orchestrator.py
src/adapters/: README.md
src/adapters/agno/: adapter.py  run.py  youtube_analysis_history.json
src/adapters/langgraph/: adapter.py  run.py
src/subagents/agno/: podcast_agent.py  youtube_agent.py  youtube_analysis_history.json
src/subagents/langgraph/: agent.py
