[project]
name = "agent2agent"
version = "0.1.0"
description = "Exploring interoperability between different agentic frameworks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "youtube_transcript_api>=0.6.0",
    "agno>=0.1.0",
    "rich>=13.0.0",
    "langchain>=0.1.0",
    "langgraph>=0.4.1",
    "langchain-tavily>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langgraph-checkpoint-sqlite>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "ddgs>=7.0.0",
    "exa-py>=1.0.0",
    "pydub>=0.25.0",
    "mutagen>=1.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
youtube-agent = "agent2agent.src.subagents.agno.youtube_agent:main"
podcast-agent = "agent2agent.src.subagents.agno.podcast_agent:main"
